--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "lint:fix": "expo lint --fix",
+    "lint:strict": "expo lint '*/**/*.{js,jsx,ts,tsx}'",
+    "prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,scss,css,md}",
+    "prepare": "husky install"
   },
   "jest": {
     "preset": "jest-expo"
@@ -26,6 +30,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -37,11 +42,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/types": "^19.5.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "conventional-changelog-atom": "^5.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "husky": "^9.1.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "lint-staged": "^15.2.10",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
